Changed the content of about

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="site-heading">
                         <h1>Clean Blog</h1>
                         <hr class="small">
-                        <span class="subheading">Data Scientist</span>
+                        <span class="subheading">Data Scientist!</span>
                     </div>
                 </div>
             </div>
