rmovied teh button from scroll

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To My Corner!</div>
                 <div class="intro-heading">Sameer Sardaar</div>
-                <a href="#services" class="page-scroll btn btn-xl"> <img class="img_scroll" src="img/circle.png" alt=""></a>
+                <a href="#services"> <img class="img_scroll" src="img/circle.png" alt=""></a>
             </div>
         </div>
     </header>
