--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To My Corner!</div>
                 <div class="intro-heading">Sameer Sardaar</div>
-                <a href="#services" class="page-scroll btn btn-xl"> <img class="img_scroll" src="img/circle.png" alt=""></a>
+                <a href="#services" class="page-scroll btn btn-xl"><i class="fa fa-angle-double-down fa-3x" style="color:white"></i></a>
             </div>
         </div>
     </header>
