Added content to index

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To My Corner!</div>
                 <div class="intro-heading">Sameer Sardaar</div>
+                <div class="intro-lead-in">Data Scientist | Mathematician | Artist</div>
                 <a href="#services" class="page-scroll btn btn-xl"><i class="fa fa-angle-double-down fa-3x" style="color:white"></i></a>
             </div>
         </div>
