added content to about me

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To My Corner!</div>
                 <div class="intro-heading">Sameer Sardaar</div>
-                <div class="intro-lead-in">Data Scientist | Mathematician | Artist</div>
                 <a href="#services" class="page-scroll btn btn-xl"><i class="fa fa-angle-double-down fa-3x" style="color:white"></i></a>
             </div>
         </div>
@@ -86,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Corners</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">I will keep it simple.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -95,24 +94,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Data Science/h4>
+                    <p class="text-muted">Click to see some of my projects related to data science and machine learning. You can also find some of my recommendations for aspiring Data Scientists.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Mathematics</h4>
+                    <p class="text-muted">Click to see some of my writing about Mathematics especially statistics, optimization, linear algebra or any stream of mathematics useufl for machine learning.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Arts</h4>
+                    <p class="text-muted">I like to think I have an artistic side. I like reading novels and photography. If you want to check out some of my recent photography or book reviews, you can check out this section.</p>
                 </div>
             </div>
         </div>
@@ -133,15 +132,15 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/mcgillu" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>20012-2016</h4>
+                                    <h4 class="subheading">McGill University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Studied Mathematics in the faculty of Science with minor conecntrations in Computer Science and Economics.</p>
                                 </div>
                             </div>
                         </li>
