--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Data Science/h4>
+                    <h4 class="service-heading">Data Science</h4>
                     <p class="text-muted">Click to see some of my projects related to data science and machine learning. You can also find some of my recommendations for aspiring Data Scientists.</p>
                 </div>
                 <div class="col-md-4">
@@ -136,11 +136,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>20012-2016</h4>
+                                    <h4>2012-2016</h4>
                                     <h4 class="subheading">McGill University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Studied Mathematics in the faculty of Science with minor conecntrations in Computer Science and Economics.</p>
+                                    <p class="text-muted">I studied Mathematics in the faculty of Science at McGill University with minor conecntrations in Computer Science and Economics.</p>
                                 </div>
                             </div>
                         </li>
@@ -206,7 +206,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">I look forward to hearing from you.</h3>
                 </div>
             </div>
             <div class="row">
