--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/mcgillu" alt="">
+                                <img class="img-circle img-responsive" src="img/about/mcgillu2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
