--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/mcgillu2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/mcgillu3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -146,15 +146,15 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/mcgillu.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/genomics.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>2016-1017</h4>
+                                    <h4 class="subheading">McGill University Hospital Centre</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Research Assistant working on genomics project.</p>
                                 </div>
                             </div>
                         </li>
