--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2016-1017</h4>
+                                    <h4>2016-2017</h4>
                                     <h4 class="subheading">McGill University Hospital Centre</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Research Assistant working on genomics project.</p>
+                                    <p class="text-muted">Research Assistant in Machine Learning working on genomics projects</p>
                                 </div>
                             </div>
                         </li>
