--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="www.linkedin.com/in/sameer-sardaar"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
