changed to timeline

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     <h4 class="subheading">McGill University</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I studied Mathematics in the faculty of Science at McGill University with minor conecntrations in Computer Science and Economics.</p>
+                                    <p class="text-muted">BSc. Mathematics with minor concentrations in Economics and Computer Science</p>
                                 </div>
                             </div>
                         </li>
@@ -164,11 +164,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>June 2016 - July 2016</h4>
+                                    <h4 class="subheading">Velan Inc</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Data Scientist Intern</p>
                                 </div>
                             </div>
                         </li>
@@ -178,11 +178,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>July 2016 - Present</h4>
+                                    <h4 class="subheading">Velan Inc</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Data Scientist</p>
                                 </div>
                             </div>
                         </li>
@@ -257,7 +257,7 @@
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="www.linkedin.com/in/sameer-sardaar"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/sameer-sardaar"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
