changed about me content

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Find my Linkedin link at the bottom if interested to learn more about my professional experience.</h3>
                 </div>
             </div>
             <div class="row">
@@ -188,9 +188,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Joined the
+                                    <br>Awesome
+                                    <br>Club!</h4>
                             </div>
                         </li>
                     </ul>
