changed about me content

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Mathematics</h4>
-                    <p class="text-muted">Click to see some of my writing about Mathematics especially statistics, optimization, linear algebra or any stream of mathematics useufl for machine learning.</p>
+                    <p class="text-muted">Click to see some of my writings about Mathematics especially statistics, optimization, linear algebra or any streams of Mathematics relevant to understanding of machine learning.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -111,7 +111,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Arts</h4>
-                    <p class="text-muted">I like to think I have an artistic side. I like reading novels and photography. If you want to check out some of my recent photography or book reviews, you can check out this section.</p>
+                    <p class="text-muted">I like to think I have an artistic side. I read fiction and poetry. At times, I even enjoy photography. Here, you will find my book recommendations, reviews, favourite poems and some abstract photographs.</p>
                 </div>
             </div>
         </div>
