--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Corners</h2>
-                    <h3 class="section-subheading text-muted">I will keep it simple.</h3>
+                    <h3 class="section-subheading text-muted">"Truth is to be found in simplicity, and not in the multiplicity and confusion of things" - Sir Isaac Newton.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Find my Linkedin link at the bottom if interested to learn more about my professional experience.</h3>
+                    <h3 class="section-subheading text-muted">"In God we trust; all others bring data" - Edward Deming</h3>
                 </div>
             </div>
             <div class="row">
