--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-area-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science</h4>
                     <p class="text-muted">Click to see some of my projects related to data science and machine learning. You can also find some of my recommendations for aspiring Data Scientists.</p>
