--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Corners</h2>
-                    <h3 class="section-subheading text-muted">"Truth is to be found in simplicity, and not in the multiplicity and confusion of things" - Sir Isaac Newton.</h3>
+                    <h3 class="section-subheading text-muted">"Truth is to be found in simplicity, and not in the multiplicity and confusion of things" - Sir Isaac Newton</h3>
                 </div>
             </div>
             <div class="row text-center">
