--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
-                        <i class="fa fa-book fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Arts</h4>
                     <p class="text-muted">I like to think I have an artistic side. I read fiction and poetry. At times, I even enjoy photography. Here, you will find my book recommendations, reviews, favourite poems and some abstract photographs.</p>
